--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>restAPIBoot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restAPIBoot</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -64,6 +65,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>serveAPI</finalName>
 	</build>
 
 </project>
