--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 9092
 spring.datasource.url = jdbc:mysql://localhost:3306/dev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.username = akhan
-spring.datasource.password = April@01
+spring.datasource.username = dev_1
+spring.datasource.password = dev@1234
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto= update
 
